# snakeplusplus

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: main.cpp
include/: GameState.h  Snake.h  SnakeFood.h  common.h  common.hpp  display.h  game.h  gamestate.h  gamestate.hpp  playerinterface.hpp  snake.h  snake.hpp  snakefood.h
src/: CMakeLists.txt  Common.cpp  GameState.cpp  GameState.h  GeneralFunctions.cpp  GeneralFunctions.h  Snake.cpp  Snake.h  SnakeFood.cpp  SnakeFood.h  botinterface.cpp  botinterface.hpp  common.cpp  common.hpp  display.cpp  gamestate.cpp  gamestate.hpp  main.cpp  playerinterface.cpp  playerinterface.hpp  snake.cpp  snake.hpp  snakefood.cpp
